# money_manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ADMINER_SETUP.md  DEPLOYMENT.md  Dockerfile  Dockerfile.adminer  README.md  config.py  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.production.template  example_usage.py  main.py  nginx-config-snippet.conf  pyproject.toml  requirements.txt  server-check.sh  setup-dev.sh  setup_ngrok.py
adminer-config/: login-password-less.php
api/: __init__.py  accounts.py  callbacks.py  connections.py  customers.py  dashboards.py  schemas.py  status.py  sync.py  transactions.py
models/: __init__.py  account.py  base.py  connection.py  customer.py  transaction.py
nginx/: default.conf  nginx.conf
services/: __init__.py  google_docs_service.py  saltedge_client.py  status_checker.py  sync_service.py
